@@ -4,7 +4,7 @@
   http://caml.inria.fr/mantis/view.php?id=5063 (DONE)
   http://caml.inria.fr/mantis/view.php?id=2533 (DONE)
   http://caml.inria.fr/mantis/view.php?id=3851 (DONE)
-  http://caml.inria.fr/mantis/view.php?id=480
+  http://caml.inria.fr/mantis/view.php?id=480 (DONE)
 
 * investigate F_FULLFSYNC fcntl and fsync on Mac OS
 
