@@ -3,14 +3,15 @@ Name:         extunix
 Version:      0.0.2-dev
 #LicenseFile:  ?
 License:      LGPL-2.1 with OCaml linking exception
-Authors:      ygrek, Sylvain Le Gall, Stéphane Glondu, Kaustuv Chaudhuri, Joshua Smith, Niki Yoshiuchi
+Authors:      ygrek, Sylvain Le Gall, Stéphane Glondu, Kaustuv Chaudhuri, Joshua Smith, Niki Yoshiuchi, Gerd Stolpmann
 Copyrights:
               (C) 2010 ygrek,
               (C) 2009 Sylvain Le Gall,
               (C) 2008-2009 Talend Inc.,
               (C) 2010 Stéphane Glondu,
               (C) 2005 Joshua Smith,
-              (C) 2010 Niki Yoshiuchi
+              (C) 2010 Niki Yoshiuchi,
+              (C) 2001 Gerd Stolpmann
 Homepage:     http://extunix.forge.ocamlcore.org/
 BuildTools:   ocamlbuild, camlp4
 Plugins:      DevFiles (0.1.0), META (0.1.0)
@@ -49,7 +50,7 @@ Executable test
   Install: false
   CompiledObject: best
   MainIs: test.ml
-  BuildDepends: extunix, oUnit (>= 1.0.2)
+  BuildDepends: extunix, oUnit (>= 1.0.3)
 
 Test main
   Command: $test 
@@ -58,7 +59,7 @@ Test main
 Document api
   Title: API reference for extunix
   Type: ocamlbuild
-  Authors: ygrek, Sylvain Le Gall, Stéphane Glondu, Kaustuv Chaudhuri, Joshua Smith, Niki Yoshiuchi
+  Authors: ygrek, Sylvain Le Gall, Stéphane Glondu, Kaustuv Chaudhuri, Joshua Smith, Niki Yoshiuchi, Gerd Stolpmann
   BuildTools: ocamldoc
   Format: HTML
   Index: index.html
